# hipDNNEP

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: pre-commit.yml
cmake/: exports.map
docs/InitialBringUp/: 01_Architecture_Report.md  02_Execution_Plan.md  02_Kernel_Refactor_Plan.md  03_Quick_Start_Setup.md  Initial_requirements.md
include/hipdnn_ep/: ep.h  ep_allocator.h  ep_data_transfer.h  ep_factory.h  ep_utils.h  kernel.h  node_compute_info.h
src/: ep.cc  ep_allocator.cc  ep_data_transfer.cc  ep_factory.cc  ep_utils.cc  hipdnn_ep_exports.cc  kernel.cc  node_compute_info.cc
test/: CMakeLists.txt  conv_test.onnx  conv_test_weights.npy  gen_conv_model.py  test_conv.cc  test_ep_load.cc
